# polonaise

./: .gitignore  CMakeLists.txt  FindThrift.cmake  PolonaiseConfig.cmake.in  PolonaiseConfigVersion.cmake.in  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/fuse/: CMakeLists.txt  main.cc
src/protocol/: CMakeLists.txt  version.h.in
src/protocol/polonaise/: polonaise.thrift
utils/: compile-thrift.sh
